objects/ALTF__Solution_Section__c.object
<CustomObject>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Details_Rich__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ALTF__Details__c</fullName>
        <label>DEPRECATED Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ALTF__Link1__c</fullName>
        <inlineHelpText>This field should contain a valid URL</inlineHelpText>
        <label>DEPRECATED Link1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ALTF__Link2__c</fullName>
        <label>DEPRECATED Link2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ALTF__Link3__c</fullName>
        <label>DEPRECATED Link3</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ALTF__Order__c</fullName>
        <inlineHelpText>Numeric values can be used to specify the sections&apos; order when using multiple sections in a solution</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALTF__Solution__c</fullName>
        <label>Solution</label>
        <referenceTo>ALTF__Solution__c</referenceTo>
        <relationshipLabel>Altify Solution Sections</relationshipLabel>
        <relationshipName>Altify_Solution_Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Altify Solution Section</label>
    <nameField>
        <label>Altify Solution Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Solution Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>